# csmt

./: pyproject.toml
src/csmt/: __init__.py  generator.py  main.py  openai_real.py  transcription_service.py  websocket_server.py
src/csmt/static/: index.html
