[project]
name = "csmt"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Lira",email = "ed@eduardolira.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",  # For serving the HTML page
    "python-multipart>=0.0.9",  # For handling multipart data
    "scipy>=1.12.0",  # For additional audio processing capabilities
    "torch (>=2.7.0,<3.0.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "faster-whisper (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "csmt"
version = "0.1.0"
description = ""
authors = ["Eduardo Lira <ed@eduardolira.com>"]
packages = [
    { include = "csmt", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
websockets = "^12.0"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
aiohttp = "^3.9.3"
python-multipart = ">=0.0.9"
scipy = ">=1.12.0"
