[project]
name = "csmt"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Lira",email = "ed@eduardolira.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
    "scipy>=1.12.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "librosa",
    "soundfile",
    "transformers @ git+https://github.com/huggingface/transformers.git@main",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "csmt"
version = "0.1.0"
description = ""
authors = ["Eduardo Lira <ed@eduardolira.com>"]
packages = [
    { include = "csmt", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
websockets = "^12.0"
sounddevice = "^0.4.6"
numpy = "*"
aiohttp = "^3.9.3"
python-multipart = ">=0.0.9"
scipy = ">=1.12.0"
torch = "2.6.0"
torchaudio = "2.6.0"
torchvision = "0.21.0"
librosa = "*"
soundfile = "*"
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "main" }
accelerate = ">=0.27.0"
bitsandbytes = ">=0.41.0"
